
Version 2.02  2010-10-24
 * get parameters function from tracker server changed, 
   add paramter: storage_sync_file_max_delay
 * local ip functions move to common/local_ip_func.c
 * when query all storage servers to store, do not increase the current
   write server index
 * struct FDFSHTTPParams add field: need_find_content_type

Version 2.01  2010-10-17
 * client/fdfs_monitor.c can specify tracker server
 * micro STORAGE_STORE_PATH_PREFIX_CHAR change to 
   FDFS_STORAGE_STORE_PATH_PREFIX_CHAR
 * php extension can set log filename
 * php extension add function: fastdfs_client_version
 * bug fixed: client/tracker_client.c tracker_get_connection_ex NULL pointer
 * set max core dump file size to at least 256MB when DEBUG_FLAG is on, 
   make sure to generate core file when core dump with DEBUG_FLAG on
 * upload file can get available storage server list of the group, 
   add command TRACKER_PROTO_CMD_SERVICE_QUERY_STORE_WITHOUT_GROUP_ALL and
   TRACKER_PROTO_CMD_SERVICE_QUERY_STORE_WITH_GROUP_ALL
 * bugfixed: storage core dump in some case

Version 2.00  2010-08-22
 * tracker network io use libevent instead of traditional io model
 * storage network io use libevent instead of traditional io model
 * storage disk read/write use separate threads
 * tracker_mem.c malloc single group and storage struct, remove referer
 * make install copy config files
 * tracker.conf add two parameters: storage_sync_file_max_delay and 
   storage_sync_file_max_time
 * client tracker_get_connection increase server_index correctly
 * storage sync to storage server adds active test
 * test programs compile ok

Version 1.29  2010-06-30
 * add files: tracker_dump.h and tracker_dump.c, tracker dump global vars
 * add files: storage_dump.h and storage_dump.c, storage dump global vars
 * sockopt.c: tcprecvfile and tcpdiscard add parameter total_recv_bytes
 * storage server add fields: storage_port and storage_http_port
 * auto rename synced remark files when the port of all storage servers 